# bank-system

./: CMakeLists.txt  Makefile  README  README.md  run_tests.sh  testes.cpp
.github/workflows/: build.yml  ci.yml  construcao_testes.yml  main.yml  test.yml
files/: dadosContas.txt  dadosTransacoesContas.txt
include/: banco.h  conta.h  gerenciador_memoria.h
src/: banco.cpp  conta.cpp  gerenciador_memoria.cpp  main.cpp
tests/: CMakeLists.txt  testes  testes.cpp
tests/include/: banco.h
